Fix z-index dropdown icon
Was on top of the header

--- a/client/src/app/menu/menu.component.scss
+++ b/client/src/app/menu/menu.component.scss
@@ -241,6 +241,10 @@ menu {
   }
 }
 
+.dropdown {
+  z-index: #{z('menu') + 1} !important;
+}
+
 .dropdown-menu {
   width: calc(100% + 40px);
 }
