--- a/client/src/sass/include/_variables.scss
+++ b/client/src/sass/include/_variables.scss
@@ -127,9 +127,9 @@ $zindex: (
   miniature    :    10,
   privacymsg   :    20,
   typeahead    :    30,
-  header       :  1000,
-  menu         : 11000,
   dropdown     : 12000,
+  header       : 12500,
+  menu         : 12600,
   popover      : 13000,
   tooltip      : 14000,
   loadbar      : 15000,
